Skeleton/assets/css/d3Style.css
.tooltip {
    position: absolute;
    width: 145px;
    height: 80px;
    padding: 2px;
    padding-top: 8px;
    font: 12px sans-serif;
    color: white;
    text-align: center;
    background: #1d1aaf;
    border: 0;
    border-radius: 10px;
  }
  .axisText {
    font-family: sans-serif;
    font-weight: bold;
    fill: black;
    text-anchor: middle;
  }

  .xactive {
    font-weight: bold;
    fill: #000;
    fill: #551aaf;
    transition: fill 0.3s ease-out;
    text-anchor: middle;
  }

  .xinactive {
    font-weight: lighter;
    fill: #551aaf;
    transition: fill 0.3s ease-out;
    text-anchor: middle;
  }
  .xinactive:hover {
    fill: #e75480;
    cursor: pointer;
  }

  .xinactive2 {
    font-weight: lighter;
    fill: #551aaf;
    transition: fill 0.3s ease-out;
    text-anchor: middle;
  }
  .xinactive2:hover {
    fill: #e75480;
    cursor: pointer;
  }

  .yactive {
    font-weight: bold;
    fill: #000;
    fill: #551aaf;
    transition: fill 0.3s ease-out;
    text-anchor: middle;
  }

  .yinactive {
    font-weight: lighter;
    fill: #551aaf;
    transition: fill 0.3s ease-out;
    text-anchor: middle;
  }
  .yinactive:hover {
    fill: #e75480;
    cursor: pointer;
  }

  .yinactive2 {
    font-weight: lighter;
    fill: #551aaf;
    transition: fill 0.3s ease-out;
    text-anchor: middle;
  }
  .yinactive2:hover {
    fill: #e75480;
    cursor: pointer;
  }

